Removed static ALLOWED_VARIATIONS, now any variation is acceptable. Also added all records to the output, even if they are not processed.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <thead>
           <tr>
             <th scope="col">Reason</th>
-            <th scope="col">Parent SKU</th>
+            <th scope="col">SKU</th>
             <th scope="col">Description</th>
           </tr>
         </thead>
